<resources>
    <string name="app_name">Buddy</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_hug">Hug</string>
    <string name="title_activity_comment">Comments</string>

    <string name="label_add_post">Add Post</string>
    <string name="label_account">Account</string>
    <string name="label_profile">Profile</string>
    <string name="label_setting">Setting</string>
    <string name="label_back">Back</string>
    <string name="label_edit">Edit</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_logout">Logout</string>
    <string name="label_done">Done</string>
    <string name="label_post">Post</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_sex">Sex</string>
    <string name="label_sexuality">Sexuality</string>
    <string name="label_race">Race</string>
    <string name="label_undefined">Undefined</string>
    <string name="label_set">Set</string>
    <string name="label_hug">Hug</string>
    <string name="label_empty">None</string>
    <string name="label_hug_back">Hug Back</string>
    <string name="label_hugged_back">Hugged Back</string>
    <string name="label_bell">Bell</string>
    <string name="label_belled">Belled</string>
    <string name="label_flag">Flag</string>
    <string name="label_flagged">Flagged</string>
    <string name="label_comments">Comments</string>

    <string name="msg_category">I want to…</string>
    <string name="msg_say_something">Say something…</string>

    <string name="tab_news">News Feed</string>
    <string name="tab_attention">Special</string>
    <string name="tab_mood">Mood</string>
    <string name="tab_more">More</string>

    <string name="key_preference">preference</string>
    <string name="key_email">email</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_tab">tab</string>
    <string name="key_token">token</string>
    <string name="key_uid">uid</string>

</resources>
