<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/icon_margin"
              android:background="@drawable/border_unchecked"
              android:layout_marginTop="@dimen/icon_margin">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_undefined"
                android:id="@+id/tv_username"
                android:layout_weight="1"
                android:gravity="left"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_undefined"
                android:id="@+id/tv_date"
                android:layout_weight="1"
                android:gravity="right"
                />
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="@dimen/widget_margin">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_empty"
                android:id="@+id/tv_content"
                android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_vertical">

        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btn_flag"
                android:src="@drawable/ic_flag_unselected"
                android:contentDescription="@string/label_flag" android:padding="12dp"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btn_bell" android:src="@drawable/ic_bell_unselected"
                android:contentDescription="@string/label_bell" android:padding="12dp"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hug"
                android:id="@+id/btn_hug"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_undefined"
                android:id="@+id/btn_hugged"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="right" android:id="@+id/btn_comment"
            android:padding="@dimen/icon_margin">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_comments"
                android:id="@+id/label_comment"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_undefined"
                android:id="@+id/tv_comment_count"/>
    </LinearLayout>

</LinearLayout>