<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".BuddyActivity">

    <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:background="@color/tab_background">

        <RelativeLayout
                android:id="@+id/tab_news_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_tab_unchecked">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/tab_news_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_tab_news"
                        />

                <TextView
                        android:id="@+id/tab_news_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_news"
                        android:textColor="#FFFFFF"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/tab_attention_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_tab_unchecked">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/tab_attention_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_tab_bell"/>

                <TextView
                        android:id="@+id/tab_attention_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_attention"
                        android:textColor="#FFFFFF"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/tab_mood_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_tab_unchecked">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/tab_mood_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_tab_mood"/>

                <TextView
                        android:id="@+id/tab_mood_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_mood"
                        android:textColor="#FFFFFF"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/tab_more_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_tab_unchecked">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/tab_more_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_tab_more"/>

                <TextView
                        android:id="@+id/tab_more_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_more"
                        android:textColor="#FFFFFF"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
