<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/widget_margin"
                android:background="#FFEFEFEF">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/border_unchecked"
            android:paddingLeft="@dimen/widget_margin"
            android:paddingTop="@dimen/widget_margin"
            android:paddingBottom="@dimen/widget_margin"
            android:id="@+id/btn_account"
            android:baselineAligned="false">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:id="@+id/iv_account"
                    android:src="@drawable/avatar_default"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_account"
                    android:id="@+id/tv_account"
                    android:paddingLeft="@dimen/widget_margin"
                    android:gravity="center"/>

        </LinearLayout>

        <FrameLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center"
                    android:src="@drawable/arrow_right"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_below="@+id/btn_account"
            android:background="@drawable/border_unchecked"
            android:paddingLeft="@dimen/icon_margin"
            android:paddingTop="@dimen/icon_margin"
            android:paddingBottom="@dimen/icon_margin"
            android:gravity="center_vertical"
            android:id="@+id/btn_profile">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_profile"
                android:id="@+id/tv_profile"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/arrow_right"
                android:paddingRight="@dimen/widget_margin"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_unchecked"
            android:layout_below="@+id/btn_profile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/icon_margin"
            android:paddingLeft="@dimen/icon_margin"
            android:paddingTop="@dimen/icon_margin"
            android:paddingBottom="@dimen/icon_margin"
            android:gravity="center_vertical"
            android:id="@+id/btn_setting">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_setting"
                android:id="@+id/tv_setting"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/arrow_right"
                android:paddingRight="@dimen/widget_margin"/>
    </LinearLayout>
</RelativeLayout>